samples/_failures_safe/1761129982_75ea60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba2cce0f.c: In function ‘main’:
./samples/SAFE/__tmp_ba2cce0f.c:170:9: error: expected declaration or statement at end of input
  170 |         }
      |         ^
./samples/SAFE/__tmp_ba2cce0f.c:170:9: error: expected declaration or statement at end of input
